--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,54 @@
-.card{
-    width: 25%;
-    height: 25%;
-    margin: 5% 20%;   
-    background-size: cover;
-    animation: fadein 3s;
-    background-position: center;
-    background-image: url('https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=752&q=80');
+/* line 2, C:/Users/vinci/Documents/Cardgame-app/sass/styles.scss */
+.card, .card0, .card1, .card2 {
+  width: 25%;
+  height: 25%;
+  margin: 5% 20%;
+  background-size: cover;
+  animation: fadein 3s;
+  background-position: center;
+  background-image: url("https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=752&q=80");
 }
 
-@keyframes move_eye { from { margin-left: -20%; } to { margin-left: 50%; }  }
+/* line 16, C:/Users/vinci/Documents/Cardgame-app/sass/styles.scss */
+.card1 {
+  animation: bounceIn 3s;
+}
+
+/* line 21, C:/Users/vinci/Documents/Cardgame-app/sass/styles.scss */
+.card2 {
+  animation: bounceIn 3s;
+}
+
+@keyframes move_eye {
+  from {
+    margin-left: -20%;
+  }
+  to {
+    margin-left: 50%;
+  }
+}
 
 @keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
+
+@keyframes bounceIn {
+  0% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+  60% {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+/*# sourceMappingURL=styles.css.map */
