--- a/styles.css
+++ b/styles.css
@@ -1,54 +1,70 @@
-/* line 2, C:/Users/vinci/Documents/Cardgame-app/sass/styles.scss */
-.card, .card0, .card1, .card2 {
-  width: 25%;
-  height: 25%;
-  margin: 5% 20%;
-  background-size: cover;
-  animation: fadein 3s;
-  background-position: center;
-  background-image: url("https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=752&q=80");
-}
 
-/* line 16, C:/Users/vinci/Documents/Cardgame-app/sass/styles.scss */
-.card1 {
-  animation: bounceIn 3s;
-}
+  body {
+    background-color: #000;
+    color: #FFF;
 
-/* line 21, C:/Users/vinci/Documents/Cardgame-app/sass/styles.scss */
-.card2 {
-  animation: bounceIn 3s;
-}
-
-@keyframes move_eye {
-  from {
-    margin-left: -20%;
   }
-  to {
-    margin-left: 50%;
+
+
+  .card-container{
+    display: flex;
+    flex-direction: column-reverse;
   }
+.card{
+    /* display: flex; */
+    width: 25%;
+    height: 25%;
+    margin: 5% 20%;   
+    border: 2px solid blue;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    background-size: cover;
+    animation: fadein 2s;
+    background-position: center;
+    background-image: url('https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=752&q=80');
 }
+
+.card0{
+  @extend .card;
+  /* // animation-delay: 5s;
+  // animation-iteration-count: 2;
+  // animation-direction: alternate; */
+}
+
+.card0:hover  {
+  transform-style: preserve-3d;
+ 
+  perspective: 1000px;
+  transition: transform 0.6s;
+  transform: rotateY(180deg);
+}
+.card1{
+  @extend .card;
+  animation: bounceIn 3s;
+  animation-timing-function: ease-in-out;
+}
+
+.card2{
+    @extend .card;
+    animation: bounceIn 3s;
+}
+@keyframes move_eye { from { margin-left: -20%; } to { margin-left: 50%; }  }
 
 @keyframes fadein {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
 
 @keyframes bounceIn {
-  0% {
-    transform: scale(0.1);
-    opacity: 0;
-  }
-  60% {
-    transform: scale(1.2);
-    opacity: 1;
-  }
-  100% {
-    transform: scale(1);
-  }
+    0% {
+      transform: scale(0.1);
+      opacity: 0;
+    }
+    60% {
+      transform: scale(1.2);
+      opacity: 1;
+    }
+    100% {
+      transform: scale(1);
+    }
 }
 
-/*# sourceMappingURL=styles.css.map */
